--- a/src/views/itemList/itemList.html
+++ b/src/views/itemList/itemList.html
@@ -20,34 +20,8 @@
     <section>
       <div class="filter"></div>
     </section>
-    <button id="button">테스트</button>
-    <section class="content" id="content">
-      <div class="sectionFlex">
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-      </div>
+    <section class="itemlist_container" id="itemlist_section">
+      <div class="itemlist_flexbox"></div>
     </section>
   </body>
 </html>
-<!-- <article>
-  <a href="#">
-    <picture class="item-img">
-      <source type="image/webp">
-      <img alt="">
-    </picture>
-    </div>
-    <div class="item-content">
-      <h2>
-        <p id="item-name"></p>
-        <p id="item-price"></p>
-      </h2>
-    </div>
-    <button class="basket"></button>
-  </a>
-</article> -->
