로그인 구별 화면구성, 세션스토리지 등록, 로그아웃 구현

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -51,16 +51,7 @@
 
           <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
             <ul id="navbar">
-              <li><a href="/login">로그인</a></li>
-              <li><a href="/register">회원가입</a></li>
-              <li>
-                <a href="#cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
+              <li><a id="logoutBtn">로그아웃</a></li>
             </ul>
           </div>
         </div>
