유저정보 get 테스트 기능

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -52,6 +52,7 @@
           <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
             <ul id="navbar">
               <li><a id="logoutBtn">로그아웃</a></li>
+              <li><a id="testBtn">테스트버튼</a></li>
             </ul>
           </div>
         </div>
