마이페이지 생성, 진행중

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -23,8 +23,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="home.css" />
-    <script src="home.js" type="module" defer></script>
+    <link rel="stylesheet" href="mypage.css" />
+    <script src="mypage.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -36,23 +36,11 @@
             <span class="has-text-link">쇼핑-n팀</span>
           </a>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
         </div>
 
           <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
             <ul id="navbar">
               <li><a id="logoutBtn">로그아웃</a></li>
-              <!-- <li><a href="/mypage" id="mypageBtn">mypage</a></li> -->
               <li><a id="testBtn">테스트버튼</a></li>
             </ul>
           </div>
@@ -60,14 +48,10 @@
       </div>
     </nav>
 
-    <div class="div-container">
-      <div class="landing" id="landingDiv">
-        <h1>랜딩 페이지</h1>
-      </div>
-      <div class="greeting" id="greetingDiv">
-        <h1>안녕하세요!</h1>
-      </div>
-    </div>
+    <section class="mypage-container">
+        
+    </section>
+
 
   </body>
 </html>
