--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,19 +1,115 @@
-.div-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+/* 앨리스배움체 */
+@import url("https://font.elice.io/EliceDigitalCoding.css");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #E9EFC0;
+  font-family: 'Elice Digital Coding', 'monospace'; 
+  color: #4a4a4a;
+  text-decoration: none;
 }
 
-.landing {
-  cursor: pointer;
-  border: 1px solid red;
+/* header */
+nav {
+  height: 10vh;
+}
+nav ul {
+  height: 50px;
+  text-align: right;
   padding: 10px;
 }
+nav ul li {
+  display: inline-block;
+}
+nav ul li:last-child {
+  margin-right: 0;
+}
+header {
+  height:80px;
+}
+.pageTop {
+  height: 100%;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: center;
+  color:#4E944F;
+}
+.brand {
+  position: relative;
+  Top: 50%;
+  transform: translateY(-50%);
+  font-size: 50px;
+}
+.brand img {
+  height: 40px;
+  vertical-align: middle;
+}
+header #title {
+  color:#4E944F;
+}
+header .subTitle {
+  font-size: 30px;
+}
 
-.greeting {
-  cursor: pointer;
-  border: 1px solid blue;
-  padding: 10px;
-  margin-left: 3rem;
+/* main */
+.sliderContainer {
+  height: 55vh;
+}
+.sliderArrowLeft {
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.sliderArrowRight {
+  position: absolute;
+  top: 50%;
+  right: 0;
+}
+
+#slider {
+  width: 1024px;
+  height: 50vh;
+  overflow: hidden;
+  position: relative;
+}
+
+#slider .slides {
+  display: block;
+  width: 2048px;
+  height: 100%;
+}
+
+#slider .slide {
+  float: left;
+  width: 1024px;
+  height: 50vh;
+}
+
+#slider .slide a{
+  width: 100%;
+  height: 100%;
+}
+
+#slider .slide img {
+  width: 100%;
+  height: 100%;
+}
+
+/* footer */
+footer .footer {
+  font-size: small;
+  line-height: 200%;
+  /* height: 100px;
+  width: 100vw; */
+  padding: 0 0 0 10px;
+  background-color: #E9EFC0;
+}
+
+.footer .companyName {
+  font-size: medium;
+  font-weight: bold;
+  line-height: 300%
 }
