로그아웃 기능 구현 중

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -49,7 +49,11 @@
     </nav>
 
     <section class="mypage-container">
-        
+        <div class="userInfo">
+            <span class="userName"></span>
+            <span class="userEmail"></span>
+            <button class="userInfoChange">회원정보</button>
+        </div>
     </section>
 
 
