--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,23 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>먹거리 장터 먹짱</title>
     <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="30x30"
-      href="./images/icon.png"
-    />
+    <link rel="icon" type="image/png" sizes="30x30" href="./images/icon.png" />
     <!-- bulma css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
     <!-- 폰트 어썸: 아이콘 -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/7630448495.js"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module" defer></script>
@@ -36,8 +24,8 @@
         <li>
           <a href="/cart" aria-current="page">
             <span class="icon">
-              <i class="fas fa-cart-shopping"></i>
-            </span><span>장바구니</span>
+              <i class="fas fa-cart-shopping"></i> </span
+            ><span>장바구니</span>
           </a>
         </li>
       </ul>
@@ -45,7 +33,7 @@
     <header>
       <div class="pageTop">
         <a href="/" class="brand">
-          <img src="./images/로고.jpg"/>
+          <img src="./images/로고.jpg" />
           <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span>
         </a>
       </div>
@@ -65,30 +53,21 @@
             </span>
           </button>
         </div>
-<<<<<<< HEAD
-
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <!-- <li><a href="/mypage" id="mypageBtn">mypage</a></li> -->
-              <li><a id="testBtn">테스트버튼</a></li>
-            </ul>
-=======
         <div id="slider">
           <div class="slides">
             <div class="slide active">
               <a href="/" target="_self">
-                <img src="./images/도매.jpg" alt="도매 카테고리로 이동">
+                <img src="./images/도매.jpg" alt="도매 카테고리로 이동" />
               </a>
             </div>
             <div class="slide">
               <a href="/" target="_self">
-                <img src="./images/소매.jpg" alt="소매 카테고리로 이동">
+                <img src="./images/소매.jpg" alt="소매 카테고리로 이동" />
               </a>
             </div>
->>>>>>> F/cart
           </div>
         </div>
-      </div>  
+      </div>
     </section>
     <footer>
       <div class="footer">
