세션스토리지로 장바구니 데이터 유지하기 구현 완료

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -23,9 +23,7 @@
         <li><a href="/">shop</a></li>
         <li>
           <a href="/cart" aria-current="page">
-            <span class="icon">
-              <i class="fas fa-cart-shopping"></i> </span
-            ><span>장바구니</span>
+            <span class="icon"> <i class="fas fa-cart-shopping"></i> </span><span>장바구니</span>
           </a>
         </li>
       </ul>
