장바구니 넣은 목록 불러오기

--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -27,20 +27,28 @@ nav ul li:last-child {
   font-size: 30px;
   padding-left: 20px;
   padding-top: 10px;
+  font-weight: bolder;
+  color: #4E944F;
 }
 
 /* main */
 .cartTitle {
   font-size: 15px;
-  padding: 30px;
+  padding: 50px 0 10px 50px;
+  font-weight: bolder;
 }
-.itemList {
-  display:inline-block;
-  padding: 20px;
-  margin: 50px;
+.cartInfoContainer {
+    min-height: 300px;
+}
+.cartList {
+  padding: 40px;
+  margin: 10px 50px 50px 50px;
   border: 2px solid #B4E197;
   width: 800px;
   float: left;
+}
+#basicText {
+  text-align: center;
 }
 .payInfo {
   width: 200px;
@@ -50,7 +58,6 @@ nav ul li:last-child {
   float: right;
 }
 
-
 /* footer */
 footer {
   clear: both;
@@ -59,8 +66,6 @@ footer {
 footer .footer {
   font-size: small;
   line-height: 200%;
-  /* height: 100px;
-  width: 100vw; */
   padding: 0 0 10px 20px;
   background-color: #E9EFC0;
 }
