--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -56,8 +56,7 @@
         <h1>장바구니</h1>
       </section>
       <div class="cartInfoContainer">
-        <section class="cartList">
-        </section>
+        <section class="cartList"></section>
         <section class="payInfo">
           <div><h2>결제정보</h2></div>
           <span>상품 수량</span>  <span id="itemAmount">@개</span>
