--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -57,12 +57,7 @@
       </section>
       <div class="cartInfoContainer">
         <section class="cartList"></section>
-        <section class="payInfo">
-          <div><h2>결제정보</h2></div>
-          <span>상품 수량</span>  <span id="itemAmount">@개</span>
-          <span>상품 금액</span>  <span id="itemPrice">@원</span>
-          <span>배송비</span>  <span id="shippingFee">3000원</span>
-        </section>
+        <section class="payInfo"></section>
       </div>
     </main>
     
