상품 목록 db연동 완료

--- a/src/views/adminPage/adminPage.html
+++ b/src/views/adminPage/adminPage.html
@@ -11,12 +11,12 @@
     <!-- 폰트 어썸: 아이콘 -->
     <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="itemInfo.css" />
-    <script src="itemInfo.js" type="module"></script>
-    <script src="quantityControlBox.js" type="module"></script>
+    <link rel="stylesheet" href="adminPage.css" />
+    <script src="adminPage.js" type="module"></script>
   </head>
   <body>
     <header>header</header>
     <nav class="category_container"></nav>
+    <section class="itemInfo_container" id="itemInfo_section"></section>
   </body>
 </html>
