--- a/src/views/itemList/itemList.html
+++ b/src/views/itemList/itemList.html
@@ -17,8 +17,8 @@
   <body>
     <header>header</header>
     <nav class="category_container">
-      <button id="category_1" data-num="1"><a href="#">손님</a></button>
-      <button id="category_2" data-num="2"><a href="#">사장님</a></button>
+      <button id="category_1" data-num="남성"><a href="#">손님</a></button>
+      <button id="category_2" data-num="여성"><a href="#">사장님</a></button>
     </nav>
     <section class="itemlist_container" id="itemlist_section">
       <div class="itemlist_flexbox"></div>
