--- a/src/views/adminPage/adminPage.css
+++ b/src/views/adminPage/adminPage.css
@@ -1,11 +1,36 @@
-header {
-  background-color: gray;
-  width: 100%;
-  height: 200px;
+body {
+  margin: 0 auto;
+  max-width: 95%;
 }
-nav {
-  background-color: white;
-  width: 100%;
-  height: 80px;
-  border: solid 1px black;
+
+.adminPage_nav {
+  display: flex;
+  flex-direction: column;
+  border-right: solid 1px gray;
+  width: 15%;
+  gap: 30%;
+}
+.menu_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.adminPage_container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  gap: 15%;
+}
+
+.adminPage_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10%;
+}
+
+.adminPage_list {
+  font-size: medium;
+  display: flex;
+  flex-direction: column;
 }
