마이페이지 info 수정 삭제 진행중

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -47,7 +47,6 @@
                     </a>
                 </li>
               <li><a id="logoutBtn">로그아웃</a></li>
-              <li><a id="testBtn">테스트버튼</a></li>
             </ul>
           </div>
         </div>
@@ -55,10 +54,16 @@
     </nav>
 
     <section class="mypage-container">
-        <div class="userInfo">
-            <span class="userName">성경주</span>
-            <span class="userEmail">test@test</span>
-            <button class="userInfoChange">회원정보수정</button>
+        <div class="mypageInfo">
+          <h1 class="mypage">마이페이지</h1>
+          <div class="userInfo">
+            <span id="userName"></span>
+            <span id="userEmail"></span>
+            <span id="userAdd"></span>
+            <span id="userPhonenum"></span>
+            <button id="infoChangeBtn">회원정보수정</button>
+            <button id="userDelBtn">계정삭제</button>
+          </div>
         </div>
     </section>
 
