--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -1,12 +1,12 @@
 /* 앨리스배움체 */
-@import url("https://font.elice.io/EliceDigitalCoding.css");
+@import url('https://font.elice.io/EliceDigitalCoding.css');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #E9EFC0;
-  font-family: 'Elice Digital Coding', 'monospace'; 
+  background-color: #e9efc0;
+  font-family: 'Elice Digital Coding', 'monospace';
   color: #4a4a4a;
   text-decoration: none;
 }
@@ -27,44 +27,26 @@ nav ul li:last-child {
   font-size: 30px;
   padding-left: 20px;
   padding-top: 10px;
-<<<<<<< HEAD
-=======
   font-weight: bolder;
-  color: #4E944F;
->>>>>>> F/cart2
+  color: #4e944f;
 }
 
 /* main */
 .cartTitle {
   font-size: 15px;
-<<<<<<< HEAD
-  padding: 30px;
-}
-.itemList {
-  display:inline-block;
-  padding: 20px;
-  margin: 50px;
-=======
   padding: 50px 0 10px 50px;
   font-weight: bolder;
 }
 .cartInfoContainer {
-    min-height: 300px;
+  min-height: 300px;
 }
 .cartList {
   padding: 40px;
   margin: 10px 10px 50px 50px;
->>>>>>> F/cart2
-  border: 2px solid #B4E197;
+  border: 2px solid #b4e197;
   width: 800px;
   float: left;
 }
-<<<<<<< HEAD
-.payInfo {
-  width: 200px;
-  padding: 20px;
-  margin: 50px;
-=======
 .itemImage {
   max-width: 70px;
   max-height: 70px;
@@ -80,15 +62,10 @@ nav ul li:last-child {
   width: 300px;
   padding: 20px;
   margin: 50px 50px 50px 0;
->>>>>>> F/cart2
-  border: 2px solid #B4E197;
+  border: 2px solid #b4e197;
   float: right;
 }
 
-<<<<<<< HEAD
-
-=======
->>>>>>> F/cart2
 /* footer */
 footer {
   clear: both;
@@ -97,17 +74,12 @@ footer {
 footer .footer {
   font-size: small;
   line-height: 200%;
-<<<<<<< HEAD
-  /* height: 100px;
-  width: 100vw; */
-=======
->>>>>>> F/cart2
   padding: 0 0 10px 20px;
-  background-color: #E9EFC0;
+  background-color: #e9efc0;
 }
 
 .footer .companyName {
   font-size: medium;
   font-weight: bold;
-  line-height: 300%
+  line-height: 300%;
 }
