--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -28,7 +28,7 @@
         <!-- <li><a href="/login">로그인</a></li> -->
         <!-- <li><a href="/register">회원가입</a></li> -->
 
-        <li><a href="/">shop</a></li>
+        <li><a href="/itemlist">shop</a></li>
         <li><a id="testBtn">테스트버튼</a></li>
       </ul>
     </nav>
