선택 삭제 및 전체삭제 구현, 금액 계산은 아직

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -56,7 +56,12 @@
         <h1>장바구니</h1>
       </section>
       <div class="cartInfoContainer">
-        <section class="cartList"></section>
+        <section class="cartList">
+          <div>
+            <button type="button" class="deleteSom">선택 삭제</button>
+            <button type="button" class="deleteAll">전체 삭제</button>
+          </div>
+        </section>
         <section class="payInfo"></section>
       </div>
     </main>
