브랜치 확인

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -63,6 +63,7 @@
             <span id="userPhonenum"></span>
             <button id="infoChangeBtn">회원정보수정</button>
             <button id="userDelBtn">계정삭제</button>
+            <button id="ChangeBtn">수정완료</button>
           </div>
         </div>
     </section>
