--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -23,8 +23,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="mypage.css" />
-    <script src="mypage.js" type="module" defer></script>
+    <link rel="stylesheet" href="signout.css" />
+    <script src="signout.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -35,17 +35,17 @@
             <img src="/elice-rabbit.png" width="30" height="30" />
             <span class="has-text-link">쇼핑-n팀</span>
           </a>
-
         </div>
 
           <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
             <ul id="navbar">
-                <li>
-                    <a href="/cart" aria-current="page">
-                        <span class="icon"><i class="fas fa-cart-shopping"></i></span>
-                        <span>장바구니</span>
-                    </a>
-                </li>
+              <li>
+                  <a href="/cart" aria-current="page">
+                      <span class="icon"><i class="fas fa-cart-shopping"></i></span>
+                      <span>장바구니</span>
+                  </a>
+              </li>
+              <li><a href="/mypage" id="mypageBtn">mypage</a></li>
               <li><a id="logoutBtn">로그아웃</a></li>
             </ul>
           </div>
@@ -53,22 +53,11 @@
       </div>
     </nav>
 
-    <section class="mypage-container">
-        <div class="mypageInfo">
-          <h1 class="mypage">마이페이지</h1>
-          <div class="userInfo">
-            <span id="userName"></span>
-            <span id="userEmail"></span>
-            <span id="userAdd"></span>
-            <span id="userPhonenum"></span>
-          </div>
-        </div>
-        <div class="mypageNav">
-          <a href="/mypage/security">정보수정</a>
-          <a href="/mypage/signout">계정삭제</a>
-        </div>
+    <section id="signout-container" class="signout-container">
+      <h2>계정삭제</h2>
+      <label for="passwordInput">현재 비밀번호</label>
+      <input type="text" id="passwordInput" placeholder="현재 비밀번호">
+      <button id="deleteBtn">삭제완료</button>
     </section>
-
-
   </body>
 </html>
