유저정보 수정기능 구현, 주소만 변경중 오류가 나오는 상황 백엔드 분과 얘기해보기

--- a/src/views/security/security.html
+++ b/src/views/security/security.html
@@ -77,6 +77,10 @@
               <label class="label" for="phonenumInput">전화번호</label>
               <input class="input" id="phonenumInput" type="number" placeholder="-없이 입력해 주세요.">
             </div>
+            <div class="field">
+              <label class="label" for="currentPassword">현재비밀번호</label>
+              <input class="input" id="currentPassword" type="text" placeholder="현재비밀번호 입력">
+            </div>
           </form>
         </div>
         <button id="infoChangeBtn">수정완료</button>
