--- a/src/views/adminPage/adminPage.html
+++ b/src/views/adminPage/adminPage.html
@@ -26,7 +26,7 @@
         </ul>
         <p class="menu-label">주문 조회</p>
         <ul class="menu-list">
-          <li><a>주문 조회/취소</a></li>
+          <li><a href="adminOrderPage.html">주문 조회/취소</a></li>
           <li><a></a></li>
         </ul>
       </aside>
@@ -41,7 +41,7 @@
           <div class="field">
             <label class="label">가격</label>
             <div class="control">
-              <input class="input is-success" type="number" placeholder="Text input" value="" />
+              <input class="input is-success" type="text" placeholder="Text input" value="" />
             </div>
           </div>
           <div class="field">
