계정수정 주소빼고 완료, 삭제 백엔드 확인 필요

--- a/src/views/security/security.html
+++ b/src/views/security/security.html
@@ -74,12 +74,18 @@
               <input class="input" id="addInput" type="text" >
             </div>
             <div class="field">
+              <input class="input" id="addInput1" type="text" >
+            </div>
+            <div class="field">
+              <input class="input" id="addInput2" type="text" >
+            </div>
+            <div class="field">
               <label class="label" for="phonenumInput">전화번호</label>
               <input class="input" id="phonenumInput" type="number" placeholder="-없이 입력해 주세요.">
             </div>
             <div class="field">
               <label class="label" for="currentPassword">현재비밀번호</label>
-              <input class="input" id="currentPassword" type="text" placeholder="현재비밀번호 입력">
+              <input class="input" id="currentPassword" type="password" placeholder="현재비밀번호 입력">
             </div>
           </form>
         </div>
