--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -56,7 +56,7 @@
     <section id="signout-container" class="signout-container">
       <h2>계정삭제</h2>
       <label for="passwordInput">현재 비밀번호</label>
-      <input type="text" id="passwordInput" placeholder="현재 비밀번호">
+      <input type="password" id="passwordInput" placeholder="현재 비밀번호">
       <button id="deleteBtn">삭제완료</button>
     </section>
   </body>
