--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -55,7 +55,7 @@
 
     <section id="signout-container" class="signout-container">
       <h2>계정삭제</h2>
-      <label for="passwordInput">현재 비밀번호</label>
+      <label for="passwordInput">계정삭제를 위한 현재 비밀번호를 입력해 주세요.</label>
       <input type="password" id="passwordInput" placeholder="현재 비밀번호">
       <button id="deleteBtn">삭제완료</button>
     </section>
