--- a/src/views/itemList/itemList.html
+++ b/src/views/itemList/itemList.html
@@ -21,7 +21,7 @@
       <button id="category_2" data-num="여성"><a href="#">사장님</a></button>
     </nav>
     <section class="itemlist_container" id="itemlist_section">
-      <div class="itemlist_flexbox"></div>
+      <div class="itemlist_flexbox" id="itemlist_flexbox"></div>
     </section>
   </body>
 </html>
