--- a/src/views/itemList/itemList.html
+++ b/src/views/itemList/itemList.html
@@ -11,7 +11,9 @@
     <!-- 폰트 어썸: 아이콘 -->
     <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="itemList.css" />
+
     <script src="itemList.js" type="module"></script>
   </head>
   <body>
