--- a/src/views/security/security.html
+++ b/src/views/security/security.html
@@ -25,6 +25,9 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="security.css" />
     <script src="security.js" type="module" defer></script>
+    <!-- 다음 주소 api -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
   </head>
   <body>
     <!-- 헤더 -->
@@ -70,14 +73,17 @@
               <input class="input" id="passwordConfirmInput" type="password" >
             </div>
             <div class="field">
-              <label class="label" for="addInput">주소</label>
-              <input class="input" id="addInput" type="text" >
+              <label class="label" for="postalNumber">주소</label>
+              <div class="addressInfo">
+                <input type="text" class="input" id="postalNumber" placeholder="우편번호" readonly>
+                <input type="button" id="findAddress" value="주소찾기">
+              </div>
             </div>
             <div class="field">
-              <input class="input" id="addInput1" type="text" >
+              <input type="text" class="input" id="addInput1" placeholder="주소" readonly>
             </div>
             <div class="field">
-              <input class="input" id="addInput2" type="text" >
+              <input type="text" class="input" id="addInput2" placeholder="상세주소">
             </div>
             <div class="field">
               <label class="label" for="phonenumInput">전화번호</label>
