코드 정리 및 디버깅

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -48,7 +48,10 @@
           </div>
           <div id="cartContainer"></div>
         </section>
-        <section class="payInfo"></section>
+        <section class="payInfo">
+          <div class="payInfoTitle">결제정보</div>
+        </section>
+        <button type="button" id="ordering">주문하기</button>
       </div>
     </main>
 
