--- a/src/views/header/header.html
+++ b/src/views/header/header.html
@@ -18,25 +18,26 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="home.css" />
-    <script src="home.js" type="module" defer></script>
-    <script src="../header/header.js" type="module" defer></script>
+    <link rel="stylesheet" href="header.css" />
+    <script src="header.js" type="module" defer></script>
+    <!-- <script src="../header/header.js" type="module" defer></script> -->
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav role="navigation" aria-label="main navigation">
-      <ul id="navbar"></ul>
-    </nav>
     <header>
-      <div class="pageTop">
-        <a href="/" class="brand">
-          <img src="./images/로고.jpg" />
-          <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span>
-        </a>
-      </div>
+      <section id="header">
+        <nav role="navigation" aria-label="main navigation">
+          <ul id="navbar"></ul>
+        </nav>
+        <div class="pageTop">
+          <a href="/" class="brand">
+            <img src="../elice-rabbit.png" />
+            <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span>
+          </a>
+        </div>
+      </section>
     </header>
     <!--메인-->
-    <section class="section">
+    <!-- <section class="section">
       <div class="sliderContainer">
         <div class="sliderArrowContainer">
           <button class="sliderArrowLeft">
@@ -65,19 +66,6 @@
           </div>
         </div>
       </div>
-    </section>
-    <footer>
-      <div class="footer">
-        <p class="companyName">(주)사팀</p>
-        <p>
-          사업자 등록번호: 000-00-00000 | 통신판매업 신고번호:
-          제0000-0000-00000호 | 대표: 이준서
-        </p>
-        <p>
-          주소: 서울시 강남구 테헤란로 53길 16 B1 데마코홀 | 이메일:
-          team4@elice.io | 고객센터: 1588-0000
-        </p>
-      </div>
-    </footer>
+    </section> -->
   </body>
 </html>
