--- a/src/views/adminPage/adminPage.html
+++ b/src/views/adminPage/adminPage.html
@@ -12,7 +12,7 @@
     <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="adminPage.css" />
-    <script src="adminPage.js" type="module"></script>
+    <script src="adminPage.js" type="module" defer></script>
   </head>
   <body>
     <div class="adminPage_container">
