--- a/src/views/itemList/itemList.css
+++ b/src/views/itemList/itemList.css
@@ -4,19 +4,17 @@ body {
 }
 header {
   background-color: gray;
-  width: 100%;
-  height: 200px;
+  width: 100vw;
+  height: 20vh;
 }
-nav {
-  background-color: aquamarine;
+.category_container {
   width: 100%;
-  height: 80px;
-}
-
-.filter {
-  background-color: skyblue;
-  height: 5em;
-  margin-bottom: 30px;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1vw;
 }
 
 .itemlist_container {
@@ -28,14 +26,13 @@ nav {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   gap: 5em;
 }
 
 .itemlist {
-  width: 230px;
-  height: 290px;
-  background-color: black;
+  width: 20%;
+  background-color: yellow;
 }
 
 .category_container {
