아이템 상세 페이지 css 작업

--- a/src/views/itemInfo/itemInfo.html
+++ b/src/views/itemInfo/itemInfo.html
@@ -11,6 +11,7 @@
     <!-- 폰트 어썸: 아이콘 -->
     <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="itemInfo.css" />
     <script src="itemInfo.js" type="module"></script>
     <script src="quantityControlBox.js" type="module"></script>
