--- a/src/views/itemInfo/itemInfo.css
+++ b/src/views/itemInfo/itemInfo.css
@@ -1,13 +1,12 @@
+body {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: bold;
+}
+
 header {
   background-color: gray;
   width: 100%;
   height: 200px;
-}
-nav {
-  background-color: white;
-  width: 100%;
-  height: 80px;
-  border: solid 1px black;
 }
 
 .itemInfo_container {
@@ -17,13 +16,14 @@ nav {
   margin: 0 auto;
   justify-content: center;
   gap: 10%;
+  padding-top: 50px;
 }
 
 .itemInfo_information {
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 5%;
-  justify-content: space-around;
 }
 
 .itemInfo_btn {
@@ -33,15 +33,16 @@ nav {
 }
 
 .itemInfo_img_container {
-  width: 70%;
+  width: 50%;
 }
 
-.itemInfo_img {
-  width: 400px;
-  height: 400px;
+.itemInfo_img_container img {
+  width: 100%;
+  border-radius: 3%;
 }
+
 .itemInfo_description {
-  border: 1px solid black;
+  padding-bottom: 20px;
 }
 .itemInfo_btn_updown {
   display: flex;
@@ -51,4 +52,22 @@ nav {
 .input {
   text-align: center;
   width: 30%;
+}
+
+.item_manufacturer {
+  color: #656e75;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: underline;
+  padding-bottom: 10px;
+}
+
+.item_title {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.item_price {
+  font-size: 30px;
+  font-weight: 700;
 }
