--- a/src/views/itemList/itemList.css
+++ b/src/views/itemList/itemList.css
@@ -27,15 +27,62 @@ header {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 5em;
+  gap: 1em;
 }
 
 .itemlist {
-  width: 20%;
-  background-color: yellow;
+  width: 30%;
+  cursor: pointer;
+  transition: all linear 0.1s;
+  overflow: hidden;
+  margin-bottom: 10px;
+  border-radius: 3%;
+}
+
+.itemlist img {
+  transition: 0.1s all linear;
+}
+
+.itemlist:hover .img {
+  transform: scale(1.1);
+  overflow: hidden;
+}
+
+.itemlist:hover {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+
+  color: #9b9b9b;
+}
+
+.img-size {
+  overflow: hidden;
+  border-radius: 3%;
+}
+.articleInfo {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 0 15px 10px;
+}
+.manufacturer {
+  font-size: 12px;
+  font-weight: 300;
+  color: #9b9b9b;
+  text-decoration: underline;
+  padding-bottom: 5px;
+}
+
+.prod_title {
+  font-size: 16px;
+}
+.price {
+  font-size: 18px;
 }
 
 .category_container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.category_container button {
+  font-weight: 700;
 }
