장바구니->결제페이지 연동 완료

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -38,7 +38,7 @@
     <!--메인-->
     <main role="main">
       <section class="cartTitle">
-        <h1>장바구니</h1>
+        <div>장바구니</div>
       </section>
       <div class="cartInfoContainer">
         <section class="cartList" id="cartList">
