결제페이지 구현 완료, 장바구니 세션 디버깅 중

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -76,7 +76,10 @@
               <input class="input" id="detailedAddInput" type="text" placeholder="동, 호수까지 정확하게 입력해 주세요">
             </div>
           </form>
-          <div class="itemInfo"></div>
+          <section class="PayInfo">
+            <div class="itemInfo"></div>
+            <div class="priceInfo"></div>
+          </section>
         </section>
         <button type="button" class="ordering" onclick="alert('주문이 완료되었습니다. 메인 페이지로 돌아갑니다.');
         location.href = '../home/home.html'">주문하기</button>
