--- a/src/views/adminPage/adminPage.css
+++ b/src/views/adminPage/adminPage.css
@@ -1,6 +1,7 @@
 body {
   margin: 0 auto;
-  max-width: 95%;
+  max-width: 96%;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .adminPage_nav {
@@ -11,25 +12,29 @@ body {
   gap: 30%;
 }
 .menu_container {
+  width: 15%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
+  padding-top: 5%;
+  gap: 5%;
 }
 .adminPage_container {
   display: flex;
   flex-direction: row;
   height: 100vh;
-  gap: 5%;
+  gap: 3%;
 }
 
 .adminPage_content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
+  gap: 5%;
   height: 90vh;
   width: 90vw;
   overflow: scroll;
-  margin-top: 40px;
+  padding-top: 25px;
 }
 
 .adminPage_list {
@@ -40,4 +45,46 @@ body {
 
 .thead {
   text-align: center;
+}
+
+.menu-label {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.menu_container .button {
+  font-weight: 500;
+  font-family: 'Noto Sans KR', sans-serif;
+  color: #9b9b9b;
+}
+
+.table caption {
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  padding: 5px;
+}
+
+.is-selected {
+  background-color: #9b9b9b !important;
+}
+
+.module_title {
+  color: black;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.form_container {
+  width: 50%;
+}
+
+.searchSection .control {
+  display: flex;
+  flex-direction: row;
+}
+
+#cancelBtn {
+  cursor: pointer;
+  background-color: #f5f4f3;
 }
