--- a/src/views/adminPage/adminPage.html
+++ b/src/views/adminPage/adminPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-n팀</title>
+    <title>먹짱ㅣ관리자용 페이지</title>
     <!-- 아이콘 -->
     <link rel="icon" type="image/png" sizes="16x16" href="/elice-rabbit-favicon.png" />
     <!-- bulma css -->
@@ -11,6 +11,7 @@
     <!-- 폰트 어썸: 아이콘 -->
     <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="adminPage.css" />
     <script src="adminPage.js" type="module" defer></script>
   </head>
@@ -18,16 +19,20 @@
     <div class="adminPage_container">
       <aside class="menu menu_container">
         <p class="menu-label">Admin Menu</p>
-        <p class="menu-label">상품 추가/수정/삭제</p>
-        <ul class="menu-list">
-          <li><button id="showItemList">상품 조회하기</button></li>
-          <li><button id="showAddItem">상품 등록하기</button></li>
-          <li><button id="showPatchDelItem">상품 수정/삭제</button></li>
-        </ul>
-        <p class="menu-label">주문 조회</p>
-        <ul class="menu-list">
-          <li><button id="showOrderedList">주문 조회/취소</button></li>
-        </ul>
+        <div>
+          <p class="menu-label">상품 추가/수정/삭제</p>
+          <ul class="menu-list">
+            <li><button class="button" id="showItemList">상품 조회하기</button></li>
+            <li><button class="button" id="showAddItem">상품 등록하기</button></li>
+            <li><button class="button" id="showPatchDelItem">상품 수정/삭제</button></li>
+          </ul>
+        </div>
+        <div>
+          <p class="menu-label">주문 조회</p>
+          <ul class="menu-list">
+            <li><button class="button" id="showOrderedList">주문 조회/취소</button></li>
+          </ul>
+        </div>
       </aside>
       <div id="adminPage_content" class="adminPage_content"></div>
     </div>
